--- a/src/partials/todo-archive.html
+++ b/src/partials/todo-archive.html
@@ -1,3 +1,5 @@
-<div class="container">
-  <ul id="archive" class="todo-archive">Archive</ul> 
-</div>
+<section class="section">
+  <div class="container">
+    <ul id="archive" class="todo-archive">Archive</ul>
+  </div>
+</section>
