--- a/src/partials/todo-list.html
+++ b/src/partials/todo-list.html
@@ -1,11 +1,23 @@
-<div class="container">
-  <div class="header-wrapper">
-    <p class="header-info">Name</p>
-    <p class="header-info">Created</p>
-    <p class="header-info">Category</p>
-    <p class="header-info">Content</p>
-    <p class="header-info">Dates</p>
+<section class="section">
+  <div class="container">
+    <div class="header-wrapper">
+      <p class="header-info">Name</p>
+      <p class="header-info">Created</p>
+      <p class="header-info">Category</p>
+      <p class="header-info">Content</p>
+      <p class="header-info">Dates</p>
+      <button class="icon-btn">
+        <svg class="icon" width="12" height="12">
+          <!-- <use href="./images/header-icons.svg#icon-archive"></use> -->
+        </svg>
+      </button>
+      <button class="icon-btn">
+        <svg class="icon" width="12" height="12">
+          <!-- <use href="./images/header-icons.svg#icon-delete"></use> -->
+        </svg>
+      </button>
+    </div>
+    <ul id="list" class="todo-list"></ul>
+    <button type="button" class="add-todo">Create note</button>
   </div>
-  <ul id="list" class="todo-list"></ul>
-  <button type="button" class="add-todo">Create note</button>
-</div>
+</section>
