--- a/src/sass/_todo-list.scss
+++ b/src/sass/_todo-list.scss
@@ -1,6 +1,16 @@
 .header-wrapper {
     display: flex;
-    
+    justify-content: space-between;
+    padding-left: 25px;
+
+    font-size: 14px;
+    font-weight:600;
+    line-height: 1.167;
+    letter-spacing: 0.04em;
+
+    background-color: rgb(165, 163, 163);
+    color:white;
+    border-radius: 6px;
 }
 
 .todo-wrapper {
