--- a/src/sass/_todo-list.scss
+++ b/src/sass/_todo-list.scss
@@ -1,6 +1,6 @@
 .header-wrapper {
     display: flex;
-    justify-content: space-between;
+    
     padding-left: 25px;
 
     font-size: 14px;
@@ -13,7 +13,38 @@
     border-radius: 6px;
 }
 
+.header-info {
+    display: block;
+    width: 145px;
+  
+}
+
+.todo-list{
+    margin-bottom: 20px;
+}
 .todo-wrapper {
     display: flex;
+    padding-left: 25px;
+    padding-right: 25px;
+}
 
+.todo-info{
+    display:block;
+    width: 145px;
+    //margin-right: 50px;
+
+    font-size: 12px;
+    font-weight:400;
+    line-height: 1.167;
+    letter-spacing: 0.04em;
+}
+
+.todo-wrapper {
+    background-color: rgb(241, 241, 252);
+}
+
+.add-todo {
+    display: block;
+    margin-left: auto;
+    margin-right: 0;
 }
