--- a/src/partials/todo-list.html
+++ b/src/partials/todo-list.html
@@ -19,5 +19,26 @@
     </div>
     <ul id="list" class="todo-list"></ul>
     <button type="button" class="add-todo">Create note</button>
+    <form class="search-form" id="search-form">
+      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <button type="submit" class="create">Create note</button>
+    <!-- </form>
+      <form className={s.form}>
+        <label className={s.label}>
+          <span className={s.title}>Name</span>
+          <input className={s.input} type="text" name="name" value={name} onChange={this.handleChange}
+            pattern="^[a-zA-Zа-яА-Я]+(([' -][a-zA-Zа-яА-Я ])?[a-zA-Zа-яА-Я]*)*$"
+            title="Имя может состоять только из букв, апострофа, тире и пробелов. Например Adrian, Jacob Mercer, Charles de Batz de Castelmore d'Artagnan и т. п."
+            required />
+        </label>
+        <label className={s.label}>
+          <span className={s.title}>Number</span>
+          <input className={s.input} type="tel" name="number" value={number} onChange={this.handleChange}
+            pattern="\+?\d{1,4}?[-.\s]?\(?\d{1,3}?\)?[-.\s]?\d{1,4}[-.\s]?\d{1,4}[-.\s]?\d{1,9}"
+            title="Номер телефона должен состоять цифр и может содержать пробелы, тире, круглые скобки и может начинаться с +"
+            required />
+        </label>
+        <button className={s.button} type="submit">Add contact</button>
+      </form> -->
   </div>
 </section>
