--- a/src/sass/_todo-list.scss
+++ b/src/sass/_todo-list.scss
@@ -43,7 +43,7 @@
     background-color: rgb(241, 241, 252);
 }
 
-.add-todo {
+.add-todo-btn {
     display: block;
     margin-left: auto;
     margin-right: 0;
