--- a/src/partials/todo-list.html
+++ b/src/partials/todo-list.html
@@ -18,10 +18,17 @@
       </button>
     </div>
     <ul id="list" class="todo-list"></ul>
-    <button type="button" class="add-todo">Create note</button>
-    <form class="search-form" id="search-form">
-      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+    <button type="button" class="add-todo-btn">Create note</button>
+    <form class="todo-form" id="todo-form" autocomplete="off">
+      <input type="text" name="name"  placeholder="Name..." />
+      <select name="category">
+        <option value="Task" selected>Task</option>
+        <option value="Random Thought">Random Thought</option>
+        <option value="Idea">Idea</option>
+      </select>
+      <input type="text" name="content" placeholder="Content..." />
       <button type="submit" class="create">Create note</button>
+    </form>
     <!-- </form>
       <form className={s.form}>
         <label className={s.label}>
