--- a/src/templates/todo-item.hbs
+++ b/src/templates/todo-item.hbs
@@ -11,7 +11,7 @@
             <p class="todo-info"><span class="todo-info__font">{{name}}</span></p>
             <p class="todo-info">{{date}}</p>
             <p class="todo-info">{{category}}</p>
-            <p class="todo-info">{{content}}</p>
+            <p class="todo-info__content">{{content}}</p>
             <p class="todo-info">{{dates}}</p>
             <button class="icon-btn">
                 <svg class="icon" width="12" height="12">
