--- a/src/partials/todo-list.html
+++ b/src/partials/todo-list.html
@@ -12,12 +12,23 @@
         </svg>
       </button>
       <button class="icon-btn">
-        <svg class="icon" width="12" height="12">
-          <!-- <use href="./images/header-icons.svg#icon-delete"></use> -->
+        
+        <svg class="icon" width="24" height="24">
+          <use href="images/icons.svg#icon-delete"></use>
         </svg>
       </button>
     </div>
-    <ul id="list" class="todo-list"></ul>
+    <ul id="list" class="todo-list">
+      <button class="icon-btn">
+        <svg class="icon" width="24" height="24">
+          <use href="/images/icons.svg#icon-archive"></use>
+        </svg>
+      </button>
+    </ul>
+  
+     
+   
+    
     <button type="button" class="add-todo-btn">Create note</button>
     <form class="todo-form" id="todo-form" autocomplete="off">
       <input type="text" name="name"  placeholder="Name..." />
