--- a/src/partials/todo-list.html
+++ b/src/partials/todo-list.html
@@ -6,24 +6,26 @@
       <p class="header-info">Category</p>
       <p class="header-info">Content</p>
       <p class="header-info">Dates</p>
+
       <button class="icon-btn">
-        <svg class="icon" width="12" height="12">
-          <!-- <use href="./images/header-icons.svg#icon-archive"></use> -->
+        <svg class="icon" width="24" height="24">
+          <use href="images/icons.svg#icon-archive"></use>
         </svg>
       </button>
+
       <button class="icon-btn">
-        
         <svg class="icon" width="24" height="24">
           <use href="images/icons.svg#icon-delete"></use>
         </svg>
       </button>
     </div>
+
     <ul id="list" class="todo-list">
-      <button class="icon-btn">
+      <!-- <button class="icon-btn">
         <svg class="icon" width="24" height="24">
-          <use href="/images/icons.svg#icon-archive"></use>
+          <use href="images/icons.svg#icon-archive"></use>
         </svg>
-      </button>
+      </button> -->
     </ul>
   
      
