--- a/src/templates/todo-item.hbs
+++ b/src/templates/todo-item.hbs
@@ -1,9 +1,5 @@
 {{#each this}}
-    <li class="todo-item" data-id={{id}}>
-        {{!-- <div class="image-thumb">
-            <a calss="image-link" href="{{largeImageURL}}"><img src="{{webformatURL}}" data-source="{{largeImageURL}}" alt="{{tags}}" loading="lazy" class="image"
-                data-id="{{id}}" /></a>
-        </div> --}}
+    <li class="todo-item" id={{id}}>
         <svg class="todo-icon" width="12" height="12">
           <use href="images/icons.svg#mind"></use>
         </svg>
@@ -13,23 +9,33 @@
             <p class="todo-info">{{category}}</p>
             <p class="todo-info__content">{{content}}</p>
             <p class="todo-info">{{dates}}</p>
-            {{!-- <button class="icon-btn">
-                <svg class="icon" width="24" height="24">
-                    <use href="/images/edit.svg"></use>
+            <div class="button-wrapper">
+                <button class="icon-btn icon-btn__edit">
+                <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg">
+                    <g fill="none" fill-rule="evenodd">
+                    <path d="M-3-3h24v24H-3z"/>
+                    <path d="M0 14.46v3.04c0 .28.22.5.5.5h3.04c.13 0 .26-.05.35-.15L14.81 6.94l-3.75-3.75L.15 14.1c-.1.1-.15.22-.15.36ZM17.71 4.04a.996.996 0 0 0 0-1.41L15.37.29a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83Z" fill="rgb(165, 163, 163)"/>
+                    </g>
                 </svg>
             </button>
-            <button class="icon-btn">
-                <svg class="icon" width="24" height="24">
-                    <use href="/images/icons.svg#icon-archive"></use>
-                </svg>
-            </button> --}}
-            <button  class="icon-btn-1" id="delete">
-                <svg class="icon" width="24" height="24">
-                    <use href="/images/icons.svg#icon-delete"></use>
+            <button class="icon-btn icon-btn__archive">
+                <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg">
+                    <g fill="none" fill-rule="evenodd">
+                    <path d="M-3-3h24v24H-3z"/>
+                    <path d="M17.54 2.23 16.15.55C15.88.21 15.47 0 15 0H3c-.47 0-.88.21-1.16.55L.46 2.23C.17 2.57 0 3.02 0 3.5V16c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V3.5c0-.48-.17-.93-.46-1.27ZM8.65 14.15 3.5 9H7V7h4v2h3.5l-5.15 5.15c-.19.19-.51.19-.7 0ZM2.12 2l.81-1h12l.94 1H2.12Z" fill="rgb(165, 163, 163)"/>
+                    </g>
                 </svg>
             </button>
+            <button  class="icon-btn icon-btn__delete" id="delete">
+                <svg class='icon' width="14" height="18" xmlns="http://www.w3.org/2000/svg">
+                    <g fill="none" fill-rule="evenodd">
+                    <path d="M-5-3h24v24H-5z"/>
+                    <path d="M1 16c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v10ZM13 1h-2.5L9.79.29C9.61.11 9.35 0 9.09 0H4.91c-.26 0-.52.11-.7.29L3.5 1H1c-.55 0-1 .45-1 1s.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1Z" fill="rgb(165, 163, 163)"/>
+                    </g>
+                </svg>
+            </button>
+            </div>
         </div>
-        
     </li>
 {{/each}}
 
