archive styles created

--- a/src/partials/todo-archive.html
+++ b/src/partials/todo-archive.html
@@ -1,5 +1,13 @@
+<!-- ARCHIVE SECTION -->
 <section class="section">
   <div class="container">
+    <div class="archive-wrapper">
+      <p class="archive-info">Note category</p>
+      <div class="archive-info__wrapper">
+        <p class="archive-info">Active</p>
+        <p class="archive-info">Archived</p>
+      </div>
+    </div>
     <ul id="archive" class="todo-archive">Archive</ul>
   </div>
 </section>
