--- a/src/partials/todo-list.html
+++ b/src/partials/todo-list.html
@@ -1,3 +1,4 @@
+<!-- TODO-LIST SECTION -->
 <section class="section">
   <div class="container">
     <div class="header-wrapper">
@@ -20,17 +21,8 @@
       </button>
     </div>
 
-    <ul id="list" class="todo-list">
-      <!-- <button class="icon-btn">
-        <svg class="icon" width="24" height="24">
-          <use href="images/icons.svg#icon-archive"></use>
-        </svg>
-      </button> -->
-    </ul>
+    <ul id="list" class="todo-list"></ul>
   
-     
-   
-    
     <button type="button" class="add-todo-btn">Create note</button>
     <form class="todo-form" id="todo-form" autocomplete="off">
       <input type="text" name="name"  placeholder="Name..." />
