--- a/src/templates/todo-item.hbs
+++ b/src/templates/todo-item.hbs
@@ -1,8 +1,8 @@
 {{#each this}}
     <li class="todo-item" id={{id}}>
-        <svg class="todo-icon" width="12" height="12">
+        {{!-- <svg class="todo-icon" width="12" height="12">
           <use href="images/icons.svg#mind"></use>
-        </svg>
+        </svg> --}}
         <div class="todo-wrapper" >
             <p class="todo-info"><span class="todo-info__font">{{name}}</span></p>
             <p class="todo-info">{{date}}</p>
