function totalData edited

--- a/src/templates/archive-item.hbs
+++ b/src/templates/archive-item.hbs
@@ -3,8 +3,8 @@
         
             <p class="archive-info"><span class="archive-info__font">{{category}}</span></p>
             <div class="archive-info__wrapper">
-                <p class="archive-info">{{activeTotal}}</p>
-                <p class="archive-info">{{archivedTotal}}</p>
+                <p class="archive-info">{{active}}</p>
+                <p class="archive-info">{{archived}}</p>
             </div>
        
     </li>
