--- a/src/templates/todo-item.hbs
+++ b/src/templates/todo-item.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
     <li class="todo-item" id={{id}}>
         {{!-- <svg class="todo-icon" width="12" height="12">
-          <use href="images/icons.svg#mind"></use>
+          <use "href=./images/icons.svg#icon-delete"></use>
         </svg> --}}
         <div class="todo-wrapper" >
             <p class="todo-info"><span class="todo-info__font">{{name}}</span></p>
