archive modal created

--- a/src/partials/todo-archive.html
+++ b/src/partials/todo-archive.html
@@ -8,6 +8,6 @@
         <p class="archive-info">Archived</p>
       </div>
     </div>
-    <ul id="archive" class="todo-archive">Archive</ul>
+    <ul id="archive" class="summary"></ul>
   </div>
 </section>
