--- a/src/sass/_archive-modal.scss
+++ b/src/sass/_archive-modal.scss
@@ -19,32 +19,6 @@ body.modal-open {
     overflow: hidden;
 }
 
-p {
-    margin: 0;
-    padding: 0;
-}
-
-img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-
-li {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h4 {
-    margin: 0;
-    padding: 0;
-}
-
 .todo__lightbox {
     @media screen and (min-width: 320px) {
         position: fixed;
@@ -56,7 +30,7 @@ h4 {
         width: 100vw;
         height: 100vh;
 
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.7);
         overflow-y: scroll;
         transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
     }
@@ -70,10 +44,10 @@ h4 {
     position: absolute;
 
     width: 280px;
-    min-height: 1860px;
+    min-height: 200px;
 
     padding: 25px 20px;
-    top: 20px;
+    top: 150px;
     left: 50%;
     transform: translate(-50%, 0);
 
@@ -86,13 +60,13 @@ h4 {
 
     @media screen and (min-width: 768px) {
         padding: 20px 20px;
-        width: 618px;
-        min-height: 990px;
+        width: 750px;
+        min-height: 120px;
     }
 
     @media screen and (min-width: 1024px) {
-        width: 882px;
-        min-height: 680px;
+        width: 750px;
+        min-height: 120px;
     }
 }
 
@@ -101,12 +75,14 @@ h4 {
     position: absolute;
     top: 5px;
     right: 5px;
+    border: none;
 
     background-color: unset;
     cursor: pointer;
+    fill: #969393;
 
     &:hover {
-        fill: #ff6b01;
+        fill: #2c2b2b;
     }
 }
 
