--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,5 @@
 @import './common';
 @import './todo-list';
 @import './archive-list';
-@import './modal';
+@import './todo-modal';
+@import './archive-modal';
