--- a/src/partials/todo-list.html
+++ b/src/partials/todo-list.html
@@ -8,7 +8,7 @@
       <p class="header-info">Content</p>
       <p class="header-info">Dates</p>
 
-      <button class="icon-btn">
+      <button class="icon-btn" id="archive">
         <svg class="icon" width="24" height="24">
           <use href="images/icons.svg#icon-archive"></use>
         </svg>
