--- a/src/partials/todo-modal.html
+++ b/src/partials/todo-modal.html
@@ -1,13 +1,11 @@
 <!-- TODO-MODAL -->
 <div class="todo__lightbox is-hidden">
     <div class="todo__modal">
- 
-            <button type="" class="todo__modal--close">
+            <button class="todo__modal--close">
                 <svg class="close-svg" width="28" height="28">
-                    <use href="./images/icons.svg#icon-delete"></use>
+                    <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
-
             <form class="todo-form" id="todo-form" autocomplete="off">
                 <input type="text" name="name" placeholder="Name..." />
                 <select name="category">
@@ -18,7 +16,5 @@
                 <input type="text" name="content" placeholder="Content..." />
                 <button type="submit" class="create submit-btn">Create note</button>
             </form>
-
-      
     </div>
 </div>
