--- a/src/templates/todo-item.hbs
+++ b/src/templates/todo-item.hbs
@@ -10,11 +10,11 @@
             <p class="todo-info__content">{{content}}</p>
             <p class="todo-info">{{dates}}</p>
             <div class="button-wrapper">
-                <button class="icon-btn icon-btn__edit">
-                <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg">
+            <button class="icon-btn icon-btn__edit">
+                <svg  width="18" height="18" xmlns="http://www.w3.org/2000/svg">
                     <g fill="none" fill-rule="evenodd">
                     <path d="M-3-3h24v24H-3z"/>
-                    <path d="M0 14.46v3.04c0 .28.22.5.5.5h3.04c.13 0 .26-.05.35-.15L14.81 6.94l-3.75-3.75L.15 14.1c-.1.1-.15.22-.15.36ZM17.71 4.04a.996.996 0 0 0 0-1.41L15.37.29a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83Z" fill="rgb(165, 163, 163)"/>
+                    <path  hover="fill:green" fill-rule="evenodd" d="M0 14.46v3.04c0 .28.22.5.5.5h3.04c.13 0 .26-.05.35-.15L14.81 6.94l-3.75-3.75L.15 14.1c-.1.1-.15.22-.15.36ZM17.71 4.04a.996.996 0 0 0 0-1.41L15.37.29a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83Z" fill="rgb(165, 163, 163)"/>
                     </g>
                 </svg>
             </button>
