--- a/src/partials/todo-list.html
+++ b/src/partials/todo-list.html
@@ -21,7 +21,7 @@
       </button>
     </div>
 
-    <ul id="list" class="todo-list"></ul>
+    <ul id="todo-list" class="todo-list"></ul>
   
     <button type="button" class="add-todo-btn">Create note</button>
 
