--- a/src/partials/archive-modal.html
+++ b/src/partials/archive-modal.html
@@ -1,13 +1,11 @@
 <!-- ARCHIVE-MODAL -->
-<div class="todo__lightbox is-hidden">
-    <div class="todo__modal">
-            <button class="todo__modal--close">
+<div class="archive__lightbox is-hidden">
+    <div class="archive__modal">
+            <button class="archive__modal--close">
                 <svg class="close-svg" width="28" height="28">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
-
-            <div class="container">
                 <div class="header-wrapper">
                     <p class="header-info">Name</p>
                     <p class="header-info">Created</p>
@@ -15,7 +13,6 @@
                     <p class="header-info">Content</p>
                     <p class="header-info">Dates</p>
                 </div>
-                <ul id="list" class="archive-list"></ul>
-            </div>
+                <ul id="archive-list" class="archive-list"></ul>
         </div>
 </div>
