--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,6 @@
 @import './common';
 @import './todo-list';
+@import './summary';
 @import './archive-list';
 @import './todo-modal';
 @import './archive-modal';
