--- a/src/templates/summary.hbs
+++ b/src/templates/summary.hbs
@@ -1,9 +1,9 @@
 {{#each this}}
-    <li class="archive-item" >
-            <p class="archive-info"><span class="archive-info__font">{{category}}</span></p>
-            <div class="archive-info__wrapper">
-                <p class="archive-info">{{active}}</p>
-                <p class="archive-info">{{archived}}</p>
+    <li class="summary-item" >
+            <p class="summary-info"><span class="summary-info__font">{{category}}</span></p>
+            <div class="summary-info__wrapper">
+                <p class="summary-info">{{active}}</p>
+                <p class="summary-info">{{archived}}</p>
             </div>
     </li>
 {{/each}}
