--- a/src/partials/summary.html
+++ b/src/partials/summary.html
@@ -1,13 +1,13 @@
-<!-- ARCHIVE SECTION -->
+<!-- SUMMARY SECTION -->
 <section class="section">
   <div class="container">
-    <div class="archive-wrapper">
+    <div class="summary-wrapper">
       <p class="archive-info">Note category</p>
       <div class="archive-info__wrapper">
         <p class="archive-info">Active</p>
         <p class="archive-info">Archived</p>
       </div>
     </div>
-    <ul id="archive" class="summary"></ul>
+    <ul id="summary" class="summary"></ul>
   </div>
 </section>
