edit function added

--- a/src/partials/todo-list.html
+++ b/src/partials/todo-list.html
@@ -7,18 +7,18 @@
       <p class="header-info">Category</p>
       <p class="header-info">Content</p>
       <p class="header-info">Dates</p>
-
-      <button class="icon-btn" id="archive">
-        <svg class="icon" width="24" height="24">
-          <use href="images/icons.svg#icon-archive"></use>
-        </svg>
-      </button>
-
-      <button class="icon-btn">
-        <svg class="icon" width="24" height="24">
-          <use href="images/icons.svg#icon-delete"></use>
-        </svg>
-      </button>
+      <div class="header-icon">
+        <button class="icon-btn" id="archive">
+          <svg class="icon" width="24" height="24">
+            <use href="images/icons.svg#icon-archive"></use>
+          </svg>
+        </button>
+        <button class="icon-btn">
+          <svg class="icon" width="24" height="24">
+            <use href="images/icons.svg#icon-delete"></use>
+          </svg>
+        </button>
+      </div>
     </div>
 
     <ul id="todo-list" class="todo-list"></ul>
