--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,5 +2,6 @@
 @import './todo-list';
 @import './summary';
 @import './archive-list';
+@import './edit-modal';
 @import './todo-modal';
 @import './archive-modal';
