--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -83,9 +83,15 @@ li {
     cursor: pointer;
     
 }
-
+.header-icon {
+    display: flex;
+    margin-left: 95px;
+}
 .icon{
-    fill: green
+    fill: whitesmoke;
+    &:hover {
+        fill: rgb(97, 89, 89);
+    }
 }
 
 .button-wrapper {
