function editTodo updated

--- a/src/partials/edit-modal.html
+++ b/src/partials/edit-modal.html
@@ -8,7 +8,7 @@
             </button>
             <form class="edit-form" id="edit-form" autocomplete="off">
                 <input type="text" name="name"  id="name"/>
-                <select name="category">
+                <select name="category" id="category">
                     <option value="Task">Task</option>
                     <option value="Random Thought">Random Thought</option>
                     <option value="Idea">Idea</option>
