function editTodo workes

--- a/src/partials/edit-modal.html
+++ b/src/partials/edit-modal.html
@@ -7,13 +7,13 @@
                 </svg>
             </button>
             <form class="edit-form" id="edit-form" autocomplete="off">
-                <input type="text" name="name"  id="name"/>
-                <select name="category" id="category">
+                <input class="edit-name" type="text" name="editName"  id="name"/>
+                <select name="editCategory" id="category">
                     <option value="Task">Task</option>
                     <option value="Random Thought">Random Thought</option>
                     <option value="Idea">Idea</option>
                 </select>
-                <input type="text" name="content" id="content" />
+                <input class="edit-content" type="text" name="editContent" id="content" />
                 <button type="submit" class="create save-changes-btn">Save changes</button>
             </form>
     </div>
