--- a/src/partials/todo-list.html
+++ b/src/partials/todo-list.html
@@ -13,7 +13,7 @@
             <use href="images/icons.svg#icon-archive"></use>
           </svg>
         </button>
-        <button class="icon-btn">
+        <button class="icon-btn" id="delete-all">
           <svg class="icon" width="24" height="24">
             <use href="images/icons.svg#icon-delete"></use>
           </svg>
