--- a/src/partials/summary.html
+++ b/src/partials/summary.html
@@ -1,11 +1,11 @@
-<!-- SUMMARY SECTION -->
+<!-- SUMMARY -->
 <section class="section">
   <div class="container">
     <div class="summary-wrapper">
-      <p class="archive-info">Note category</p>
-      <div class="archive-info__wrapper">
-        <p class="archive-info">Active</p>
-        <p class="archive-info">Archived</p>
+      <p class="summary-header">Note category</p>
+      <div class="summary-header__wrapper">
+        <p class="summary-header">Active</p>
+        <p class="summary-header">Archived</p>
       </div>
     </div>
     <ul id="summary" class="summary"></ul>
