--- a/src/partials/todo-list.html
+++ b/src/partials/todo-list.html
@@ -1,8 +1,8 @@
-<!-- TODO-LIST SECTION -->
+<!-- TODO-LIST -->
 <section class="section">
   <div class="container">
     <div class="header-wrapper">
-      <p class="header-info">Name</p>
+      <p class="header-info header-info__name">Name</p>
       <p class="header-info">Created</p>
       <p class="header-info">Category</p>
       <p class="header-info">Content</p>
