--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -41,6 +41,17 @@ ul{
 li {
     list-style: none;
 }
+// p{
+//     margin: 0;
+//     padding: 0;
+// }
+
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
+
 .container {
     margin-left: auto;
     margin-right: auto;
@@ -63,8 +74,8 @@ li {
 }
 
 .section {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 .icon-btn {
     margin-right: 5px;
