--- a/src/templates/todo.hbs
+++ b/src/templates/todo.hbs
@@ -4,7 +4,7 @@
           <use "href=./images/icons.svg#icon-delete"></use>
         </svg> --}}
         <div class="todo-wrapper" >
-            <p class="todo-info"><span class="todo-info__font">{{name}}</span></p>
+            <p class="todo-info todo-info__font">{{name}}</p>
             <p class="todo-info">{{date}}</p>
             <p class="todo-info">{{category}}</p>
             <p class="todo-info__content">{{content}}</p>
