button styles edited

--- a/src/partials/todo-modal.html
+++ b/src/partials/todo-modal.html
@@ -14,7 +14,7 @@
                     <option value="Idea">Idea</option>
                 </select>
                 <input type="text" name="content" placeholder="Content..." />
-                <button type="submit" class="create submit-btn">Create note</button>
+                <button type="submit" class="add-todo-btn" id="add-todo-submit">Create note</button>
             </form>
     </div>
 </div>
