--- a/src/templates/archive.hbs
+++ b/src/templates/archive.hbs
@@ -9,9 +9,9 @@
             <p class="todo-info">{{category}}</p>
             <p class="todo-info__content">{{content}}</p>
             <p class="todo-info">{{dates}}</p>
-            <div class="button-wrapper">
+            {{!-- <div class="button-wrapper"> --}}
             <button type="button" class="archive-btn__unpack">Unpack</button>
-        </div>
+        {{!-- </div> --}}
         </div>
     </li>
 {{/each}}
