--- a/src/partials/archive-modal.html
+++ b/src/partials/archive-modal.html
@@ -7,7 +7,7 @@
                 </svg>
             </button>
                 <div class="header-wrapper">
-                    <p class="header-info">Name</p>
+                    <p class="header-info header-info__name">Name</p>
                     <p class="header-info">Created</p>
                     <p class="header-info">Category</p>
                     <p class="header-info">Content</p>
