--- a/src/sass/_archive-list.scss
+++ b/src/sass/_archive-list.scss
@@ -1,55 +1,138 @@
-.archive-wrapper {
-    display: flex;
+.archive__lightbox {
+    @media screen and (min-width: 320px) {
+        position: fixed;
+        top: 0;
+        display: flex;
+
+        justify-content: center;
+
+        width: 100vw;
+        height: 100vh;
+
+        background-color: rgba(0, 0, 0, 0.7);
+        overflow-y: scroll;
+        transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    @media screen and (min-width: 1024px) {
+        align-items: center;
+    }
+}
+
+.archive__modal {
+    position: absolute;
+
+    width: 280px;
+    min-height: 200px;
+
+    padding: 25px 20px;
+    top: 50px;
+    left: 50%;
+    transform: translate(-50%, 0);
+
+    justify-content: center;
+
+    background-color: #ffffff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+
+    @media screen and (min-width: 768px) {
+        padding: 40px 40px;
+        width: 700px;
+        min-height: 800px;
+    }
+
+    @media screen and (min-width: 1024px) {
+        width: 1000px;
+        min-height: 800px;
+    }
+}
+
+
+.archive__modal--close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    border: none;
+
+    background-color: unset;
+    cursor: pointer;
+    fill: #969393;
+
+    &:hover {
+        fill: #2c2b2b;
+    }
+}
+
+.archive-list {
     margin-bottom: 20px;
-    padding-left: 25px;
-    
-    font-size: 14px;
-    font-weight:600;
-    line-height: 1.167;
-    letter-spacing: 0.04em;
-    
-    background-color: rgb(165, 163, 163);
-    color:white;
-    border-radius: 6px;
+    color: rgb(92, 90, 90)
 }
-.archive-info__wrapper {
-    display: flex;
-    margin-left: 200px;
-}
+
 .archive-item {
+    margin-bottom: 20px;
+}
+
+.archive-wrapper {
     display: flex;
     padding-left: 25px;
     padding-right: 25px;
-    
-}
-.archive-info {
-    display: block;
-    width: 145px;
 
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 1.167;
-    letter-spacing: 0.04em;
-  
-}
-.todo-archive {
-    
-}
-.archive-item {
-    margin-bottom: 20px;
     background-color: rgb(241, 241, 252);
 }
 
+.archive-info {
+    display:block;
+    width: 145px;
+    
+    font-size: 12px;
+    font-weight:500;
+    line-height: 1.167;
+    letter-spacing: 0.06em;
+}
+
 .archive-info__font {
+    width: 180px;
+    color: rgb(54, 54, 54);
+    font-weight: 700;
+}
+
+.archive-info__wrapper {
+    width: 180px;
+    color: rgb(54, 54, 54);
+    font-weight: 700;
+}
+
+.archive-info__content {
+    margin-right: 10px;
+    white-space: nowrap;
+    width: 135px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    font-size: 12px;
     font-weight: 500;
+    line-height: 1.167;
+    letter-spacing: 0.06em;
+}
+
+.archive-info__content:hover {
+    white-space: normal;
+    margin-right: 0;
+    overflow: visible;
+    width: 145px;
 }
 
 .archive-btn__unpack {
-    display: block;
-    cursor: pointer;
+    display: inline-block;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    
     text-align: center;
-    width: 110px;
-    height: 28px;
+    width: 80px;
+    height: 24px;
     background-color: white;
     color: rgb(92, 90, 90);
     
@@ -57,10 +140,12 @@
     text-decoration: none;
     font-weight: 600;
     font-size: 12px;
-    line-height: 1.333;
+    line-height: 1.117;
     
     border-radius: 5px;
-    border: 2px solid rgb(165, 163, 163);
+    border: 1px solid rgb(165, 163, 163);
+
+    cursor: pointer;
     
     &:hover {
         background-color: rgb(165, 163, 163);
