--- a/src/sass/_todo-list.scss
+++ b/src/sass/_todo-list.scss
@@ -40,8 +40,6 @@
     display: flex;
     padding-left: 25px;
     padding-right: 25px;
-    // padding-top: 5px;
-    // padding-bottom: 5px;
 
     background-color: rgb(241, 241, 252);
 }
@@ -80,6 +78,11 @@
     margin-right: 0;
     overflow: visible;
     width: 145px;
+}
+
+.button-wrapper {
+    display: flex;
+    margin-left: 70px;
 }
 
 .add-todo-btn {
