--- a/src/templates/archive.hbs
+++ b/src/templates/archive.hbs
@@ -3,15 +3,15 @@
         {{!-- <svg class="todo-icon" width="12" height="12">
           <use "href=./images/icons.svg#icon-delete"></use>
         </svg> --}}
-        <div class="todo-wrapper" >
-            <p class="todo-info"><span class="todo-info__font">{{name}}</span></p>
-            <p class="todo-info">{{date}}</p>
-            <p class="todo-info">{{category}}</p>
-            <p class="todo-info__content">{{content}}</p>
-            <p class="todo-info">{{dates}}</p>
-            {{!-- <div class="button-wrapper"> --}}
-            <button type="button" class="archive-btn__unpack">Unpack</button>
-        {{!-- </div> --}}
+        <div class="archive-wrapper" >
+            <p class="archive-info archive-info__font">{{name}}</p>
+            <p class="archive-info">{{date}}</p>
+            <p class="archive-info">{{category}}</p>
+            <p class="archive-info__content">{{content}}</p>
+            <p class="archive-info">{{dates}}</p>
+            <div>
+                <button type="button" class="archive-btn__unpack">Unpack</button>      
+            </div>    
         </div>
     </li>
 {{/each}}
