--- a/src/partials/todo-modal.html
+++ b/src/partials/todo-modal.html
@@ -7,13 +7,13 @@
                 </svg>
             </button>
             <form class="todo-form" id="todo-form" autocomplete="off">
-                <input type="text" name="name" placeholder="Name..." />
-                <select name="category">
+                <input class="todo-input" type="text" name="name" placeholder="Name..." />
+                <select class="todo-select" name="category">
                     <option value="Task" selected>Task</option>
                     <option value="Random Thought">Random Thought</option>
                     <option value="Idea">Idea</option>
                 </select>
-                <input type="text" name="content" placeholder="Content..." />
+                <textarea class="todo-textarea" rows="3" type="text" name="content" placeholder="Content..."></textarea>
                 <button type="submit" class="add-todo-btn" id="add-todo-submit">Create note</button>
             </form>
     </div>
