--- a/src/templates/archive.hbs
+++ b/src/templates/archive.hbs
@@ -9,7 +9,7 @@
             <p class="archive-info">{{category}}</p>
             <p class="archive-info__content">{{content}}</p>
             <p class="archive-info">{{dates}}</p>
-            <div>
+            <div class="archive-button__wrapper">
                 <button type="button" class="archive-btn__unpack">Unpack</button>      
             </div>    
         </div>
