all modals edited

--- a/src/partials/archive-modal.html
+++ b/src/partials/archive-modal.html
@@ -1,7 +1,7 @@
 <!-- ARCHIVE-MODAL -->
-<div class="archive__lightbox is-hidden">
-    <div class="archive__modal">
-            <button class="archive__modal--close">
+<div class="archive-lightbox is-hidden">
+    <div class="archive-modal">
+            <button class="archive-modal__close">
                 <svg class="close-svg" width="28" height="28">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
