--- a/src/partials/edit-modal.html
+++ b/src/partials/edit-modal.html
@@ -1,7 +1,7 @@
 <!-- EDIT-MODAL -->
-<div class="edit__lightbox is-hidden">
-    <div class="edit__modal">
-            <button class="edit__modal--close">
+<div class="edit-lightbox is-hidden">
+    <div class="edit-modal">
+            <button class="edit-modal__close">
                 <svg class="close-svg" width="28" height="28">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
