--- a/src/partials/todo-modal.html
+++ b/src/partials/todo-modal.html
@@ -1,7 +1,7 @@
 <!-- TODO-MODAL -->
-<div class="todo__lightbox is-hidden">
-    <div class="todo__modal">
-            <button class="todo__modal--close">
+<div class="todo-lightbox is-hidden">
+    <div class="todo-modal">
+            <button class="todo-modal__close">
                 <svg class="close-svg" width="28" height="28">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
