--- a/src/sass/_archive-list.scss
+++ b/src/sass/_archive-list.scss
@@ -1,4 +1,4 @@
-.archive__lightbox {
+.archive-lightbox {
     @media screen and (min-width: 320px) {
         position: fixed;
         top: 0;
@@ -19,7 +19,7 @@
     }
 }
 
-.archive__modal {
+.archive-modal {
     position: absolute;
 
     width: 280px;
@@ -50,7 +50,7 @@
 }
 
 
-.archive__modal--close {
+.archive-modal__close {
     position: absolute;
     top: 5px;
     right: 5px;
