--- a/src/sass/_todo-modal.scss
+++ b/src/sass/_todo-modal.scss
@@ -1,4 +1,4 @@
-.todo__lightbox {
+.todo-lightbox {
     @media screen and (min-width: 320px) {
         position: fixed;
         top: 0;
@@ -19,7 +19,7 @@
     }
 }
 
-.todo__modal {
+.todo-modal {
     position: absolute;
 
     width: 280px;
@@ -50,7 +50,7 @@
 }
 
 
-.todo__modal--close {
+.todo-modal__close {
     position: absolute;
     top: 5px;
     right: 5px;
