--- a/src/sass/_archive-list.scss
+++ b/src/sass/_archive-list.scss
@@ -76,7 +76,7 @@
 
 .archive-wrapper {
     display: flex;
-    padding-left: 25px;
+    padding-left: 10px;
     padding-right: 25px;
 
     background-color: rgb(241, 241, 252);
@@ -93,7 +93,7 @@
 }
 
 .archive-info__font {
-    width: 180px;
+    width: 168px;
     color: rgb(54, 54, 54);
     font-weight: 700;
 }
@@ -161,4 +161,24 @@
         background-color: white;
         color: rgb(92, 90, 90);
     }
+}
+
+.archive-icon {
+    box-sizing: border-box;
+    width: 30px;
+    height: 30px;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 10px;
+
+    background-color: rgb(92, 90, 90);
+    border-radius: 50%;
+}
+
+.archive-icon__svg {
+    //display: block;
+
+    margin-top: 5px;
+    margin-left: 5px;
+    fill: whitesmoke;
 }
