--- a/src/templates/archive.hbs
+++ b/src/templates/archive.hbs
@@ -4,6 +4,11 @@
           <use "href=./images/icons.svg#icon-delete"></use>
         </svg> --}}
         <div class="archive-wrapper" >
+            <div class="archive-icon" >
+                <svg class="archive-icon__svg" width="18" height="18">
+                    <use href={{svgUrl}}></use>
+                </svg>
+            </div>
             <p class="archive-info archive-info__font">{{name}}</p>
             <p class="archive-info">{{date}}</p>
             <p class="archive-info">{{category}}</p>
