--- a/src/templates/summary.hbs
+++ b/src/templates/summary.hbs
@@ -1,5 +1,10 @@
 {{#each this}}
     <li class="summary-item" >
+            <div class="summary-icon" >
+                <svg class="summary-icon__svg" width="18" height="18">
+                    <use href={{svgUrl}}></use>
+                </svg>
+            </div>
             <p class="summary-info"><span class="summary-info__font">{{category}}</span></p>
             <div class="summary-info__wrapper">
                 <p class="summary-info">{{active}}</p>
