--- a/src/partials/archive-modal.html
+++ b/src/partials/archive-modal.html
@@ -6,12 +6,12 @@
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
-                <div class="header-wrapper">
-                    <p class="header-info header-info__name">Name</p>
-                    <p class="header-info">Created</p>
-                    <p class="header-info">Category</p>
-                    <p class="header-info">Content</p>
-                    <p class="header-info">Dates</p>
+                <div class="archive-header-wrapper">
+                    <p class="archive-header-info archive-header-info__name">Name</p>
+                    <p class="archive-header-info">Created</p>
+                    <p class="archive-header-info">Category</p>
+                    <p class="archive-header-info">Content</p>
+                    <p class="archive-header-info">Dates</p>
                 </div>
                 <ul id="archive-list" class="archive-list"></ul>
         </div>
