--- a/src/sass/_archive-list.scss
+++ b/src/sass/_archive-list.scss
@@ -64,7 +64,29 @@
         fill: #2c2b2b;
     }
 }
+.archive-header-wrapper {
+    display: flex;
+    margin-bottom: 20px;
+    padding-left: 48px;
 
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.167;
+    letter-spacing: 0.06em;
+
+    background-color: rgb(165, 163, 163);
+    color: white;
+    border-radius: 6px;
+}
+
+.archive-header-info {
+    display: block;
+    width: 144px;
+}
+
+.archive-header-info__name {
+    width: 170px;
+}
 .archive-list {
     margin-bottom: 20px;
     color: rgb(92, 90, 90)
