--- a/src/sass/_summary.scss
+++ b/src/sass/_summary.scss
@@ -60,6 +60,7 @@
     margin-right: 10px;
 
     background-color: rgb(92, 90, 90);
+   // background-image: url('../images/buy.svg');
     border-radius: 50%;
 }
 
