--- a/src/templates/summary.hbs
+++ b/src/templates/summary.hbs
@@ -1,6 +1,8 @@
 {{#each this}}
     <li class="summary-item" >
+        {{!-- <img src={{svgUrl}} alt=""> --}}
             <div class="summary-icon" >
+                
                 <svg class="summary-icon__svg" width="18" height="18">
                     <use href={{svgUrl}}></use>
                 </svg>
