--- a/src/sass/_todo-list.scss
+++ b/src/sass/_todo-list.scss
@@ -90,24 +90,40 @@
 
 .todo-info{
     display:block;
-    width: 145px;
+    width: 100px;
     
     font-size: 12px;
     font-weight:500;
     line-height: 1.167;
     letter-spacing: 0.06em;
+
+    @media screen and (min-width: 768px) {
+        width: 80px;
+    }
+    
+    @media screen and (min-width: 1024px) {
+        width: 145px;
+    }
 }
 
 .todo-info__font {
-    width: 180px;
+    width: 100px;
     color: rgb(54, 54, 54);
     font-weight:700;
+
+    @media screen and (min-width: 768px) {
+        width: 120px;
+    }
+    
+    @media screen and (min-width: 1024px) {
+        width: 180px;
+    }
 }
 
 .todo-info__content {
     margin-right: 10px;
     white-space: nowrap;
-    width: 135px;
+    width: 80px;
     overflow: hidden;
     text-overflow: ellipsis;
 
@@ -115,6 +131,14 @@
     font-weight:500;
     line-height: 1.167;
     letter-spacing: 0.06em;
+
+    @media screen and (min-width: 768px) {
+        width: 80px;
+    }
+    
+    @media screen and (min-width: 1024px) {
+        width: 135px;
+    }
 }
 
 .todo-info__content:hover {
@@ -122,11 +146,25 @@
     margin-right: 0;
     overflow: visible;
     width: 145px;
+    @media screen and (min-width: 768px) {
+        width: 100px;
+    }
+    
+    @media screen and (min-width: 1024px) {
+        width: 145px;
+    }
 }
 
 .button-wrapper {
     display: flex;
     margin-left: 55px;
+    @media screen and (min-width: 768px) {
+        margin-left: 75px;
+    }
+    
+    @media screen and (min-width: 1024px) {
+        margin-left: 55px;
+    }
 }
 
 .add-todo-btn {
@@ -165,14 +203,24 @@
     }
 }
 .todo-icon {
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     margin-top: auto;
     margin-bottom: auto;
     margin-right: 10px;
    
     background-color: rgb(92, 90, 90);
     border-radius: 50%;
+
+    @media screen and (min-width: 768px) {
+        width: 20px;
+        height: 20px;
+    }
+    
+    @media screen and (min-width: 1024px) {
+        width: 30px;
+        height: 30px;
+    }
 }
 
 .todo-icon__svg {
