--- a/src/sass/_archive-list.scss
+++ b/src/sass/_archive-list.scss
@@ -67,7 +67,7 @@
 .archive-header-wrapper {
     display: flex;
     margin-bottom: 20px;
-    padding-left: 48px;
+    padding-left: 18px;
 
     font-size: 14px;
     font-weight: 700;
@@ -77,15 +77,39 @@
     background-color: rgb(165, 163, 163);
     color: white;
     border-radius: 6px;
+
+    @media screen and (min-width: 768px) {
+        padding-left: 45px;
+    }
+    
+    @media screen and (min-width: 1024px) {
+        padding-left: 48px;
+    }
 }
 
 .archive-header-info {
     display: block;
-    width: 144px;
+    width: 50px;
+
+    @media screen and (min-width: 768px) {
+        width: 82px;
+    }
+    
+    @media screen and (min-width: 1024px) {
+        width: 147px;
+    }
 }
 
 .archive-header-info__name {
-    width: 170px;
+    width: 100px;
+    
+    @media screen and (min-width: 768px) {
+        width: 122px;
+    }
+    
+    @media screen and (min-width: 1024px) {
+        width: 178px;
+    }
 }
 .archive-list {
     margin-bottom: 20px;
@@ -106,18 +130,34 @@
 
 .archive-info {
     display:block;
-    width: 145px;
+    width: 100px;
     
     font-size: 12px;
     font-weight:500;
     line-height: 1.167;
     letter-spacing: 0.06em;
+    
+    @media screen and (min-width: 768px) {
+        width: 80px;
+    }
+    
+    @media screen and (min-width: 1024px) {
+        width: 145px;
+    }
 }
 
 .archive-info__font {
-    width: 168px;
+    width: 100px;
     color: rgb(54, 54, 54);
     font-weight: 700;
+
+    @media screen and (min-width: 768px) {
+        width: 120px;
+    }
+    
+    @media screen and (min-width: 1024px) {
+        width: 180px;
+    }
 }
 
 .archive-info__wrapper {
@@ -129,7 +169,7 @@
 .archive-info__content {
     margin-right: 10px;
     white-space: nowrap;
-    width: 135px;
+    width: 80px;
     overflow: hidden;
     text-overflow: ellipsis;
 
@@ -137,6 +177,14 @@
     font-weight: 500;
     line-height: 1.167;
     letter-spacing: 0.06em;
+
+    @media screen and (min-width: 768px) {
+        width: 80px;
+    }
+    
+    @media screen and (min-width: 1024px) {
+        width: 135px;
+    }
 }
 
 .archive-info__content:hover {
@@ -144,6 +192,14 @@
     margin-right: 0;
     overflow: visible;
     width: 145px;
+
+    @media screen and (min-width: 768px) {
+        width: 100px;
+    }
+    
+    @media screen and (min-width: 1024px) {
+        width: 145px;
+    }
 }
 .archive-button__wrapper {
     margin-top: auto;
